--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .link1 {
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.586);
     display: flex;
     justify-content: space-around;
     margin-left: 600px;
@@ -31,8 +31,9 @@ img {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 220vh;
+    height: 150vh;
     width: 100wh;
+    text-align: center;
 
 
 }
@@ -49,5 +50,11 @@ img {
 }
 
 #terms {
-    display: flex
+    text-align: center;
+
+
+}
+
+.container4 {
+    text-align: center;
 }
